# comfy-remote-prompt

./: .gitignore  LICENSE  README.md  config.ini  pyproject.toml  requirements.txt  workflow1_api.json  workflow_api.json
src/remote-prompt/: __main__.py  remote_prompt.py
src/remote_prompt/: .__main__.py.swp  __init__.py  __main__.py  remote_prompt.py
