[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "remote-prompt"
authors = [{name = "François BRUMENT", email = "francois.brument@esadse.fr"},{name = "Jacques-Daniel PILLON", email = "jacques-daniel.pillon@esadse.fr"}]
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]


dependencies = [
    "esptool",
    "pyduinocli",
    "pyserial"
]

[project.scripts]
remote-prompt = "remote-prompt.__main__:main"


