[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "remote-prompt"
authors = [{name = "François BRUMENT", email = "francois.brument@esadse.fr"},{name = "Jacques-Daniel PILLON", email = "jacques-daniel.pillon@esadse.fr"}]
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]


dependencies = [
    "certifi==2024.2.2",
    "charset-normalizer==3.3.2",
    "idna==3.6",
    "pillow==10.2.0",
    "requests==2.31.0",
    "urllib3==2.2.1",
    "websocket-client==1.7.0",
]

[project.scripts]
remote-prompt = "remote_prompt.__main__:main"


